@@ -1,0 +1,22 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Foundation -->
+<window id="2">
+    <defaultcontrol always="true">50</defaultcontrol>
+    <menucontrol>300</menucontrol>
+    
+    <include>View_ViewIDs</include>
+    <controls>
+        <include>Global_Background</include>
+        <include>View_Library</include>
+        <include>Topbar</include>
+        
+        
+        <include>Defs_Options_StandardButtons</include>
+        <!-- <control type="button" id="6">
+            <description>Slideshow</description>
+            <label>13317</label>
+            <include>Defs_Hidden_Button</include>
+        </control> -->
+    </controls>
+
+</window>
