@@ -1,3 +1,7 @@
+[B]0.9.35[/B]
+Work on Kodi Games section begins
+Add MyGames.xml
+
 [B]0.9.34[/B]
 Test out moveup/down scroll around for EPG
 
